[package]
authors = ["Andy Russell <arussell123@gmail.com>"]
name = "seventeen"
version = "0.1.0"

[dependencies]
failure = "0.1"
futures = "0.1"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
log4rs = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.2"
termion = "1"
xdg = "2"
