cargo-features = ["rename-dependency"]

[package]
authors = ["Andy Russell <arussell123@gmail.com>"]
name = "seventeen"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "1"
channel = { package = "crossbeam-channel", version = "0.2" }
failure = "0.1"
futures = "0.1"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
log4rs = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.2"
termion = "1"
xdg = "2"
ndarray = "0.11.2"
euclid = "0.19.2"
